# teoremags

./: LICENSE  README.rst  pyproject.toml
src/teoremags/: constantes.py  definiciones.py  equivalencias.py  geometria.py  porcentajes.py
src/test/: test_funcional.py
